# eye

./: .gitignore  AGENTS.md  CMakeLists.txt
.opencode/skills/building-eye/: SKILL.md
app/: CMakeLists.txt  main.cpp
cmake/: toolchain-arm-v01c02.cmake
conf/: zlog.conf
docs/superpowers/plans/: 2026-04-07-directory-restructure-plan.md  2026-05-03-rtsp-server.md
docs/superpowers/specs/: 2026-04-07-directory-restructure-design.md  2026-05-03-rtsp-server-design.md
include/: common_types.h  global_constants.h  i_stream_provider.h  i_video_pipeline.h  logger.h  stream_common.h  test.h  video_process_hi.h  video_venc_hi.h
modules/core/: CMakeLists.txt
modules/core/include/: common_types.h  global_constants.h  logger.h
modules/interface/: CMakeLists.txt
modules/interface/include/: i_stream_provider.h  i_video_encoder.h
modules/platform/hi3516cv610/: CMakeLists.txt
modules/platform/hi3516cv610/include/: hi_stream_fetcher.h  hi_venc_param.h  hi_video_pipeline.h
modules/platform/hi3516cv610/src/: hi_stream_fetcher.cpp  hi_venc_param.cpp  hi_video_pipeline.cpp
modules/rtsp/: CMakeLists.txt
modules/rtsp/include/: rtsp_frame_queue.h  rtsp_monotonic_clock.h  rtsp_nal_parser.h  rtsp_parameter_set_cache.h  rtsp_server.h  rtsp_server_media_subsession.h  rtsp_stream_source.h
modules/rtsp/src/: rtsp_frame_queue.cpp  rtsp_monotonic_clock.cpp  rtsp_nal_parser.cpp  rtsp_parameter_set_cache.cpp  rtsp_server.cpp  rtsp_server_media_subsession.cpp  rtsp_stream_source.cpp
modules/stream/: CMakeLists.txt
modules/stream/include/: recorder_consumer.h  stream_common.h  stream_consumer_manager.h  stream_distributor.h  stream_frame.h
modules/stream/src/: recorder_consumer.cpp  stream_consumer_manager.cpp  stream_distributor.cpp  stream_frame.cpp
source/: global_constants.cpp  logger.cpp  main.cpp  test.cpp  video_process_hi.cpp  video_venc_hi.cpp
source/stream/: CMakeLists.txt  recorder_consumer.cpp  recorder_consumer.h  stream_consumer_manager.cpp  stream_consumer_manager.h  stream_distributor.cpp  stream_distributor.h  stream_fetcher.cpp  stream_fetcher.h  stream_frame.cpp  stream_frame.h
test/: CMakeLists.txt  test.cpp
test/rtsp/: rtsp_unit_tests.cpp
test/stream/: stream_test.cpp  stream_test.h
